--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
